# cc-license

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish_crate.yml  test_and_check.yml
src/: error.rs  lib.rs  nomenclature.rs  rights.rs  version.rs
